test/errhandling/psahabu/deinit-no-throw.good
deinit-no-throw.chpl:15: error: deinit is not permitted to throw
